fixed styling on mobile and removed redux devtools from build

--- a/src/components/Order/Order.module.css
+++ b/src/components/Order/Order.module.css
@@ -10,13 +10,17 @@
 
 .Order ul {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
   list-style: none;
   padding-left: 0;
 }
 
 .Order li {
   padding: 4px 6px;
-  margin-left: 10px;
+  margin: 4px 10px;
+  width: 80px;
   border: 1px solid #cccccc;
   align-items: center;
+  text-align: center;
 }
